--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.4.5",
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
