--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-DB_USER=tu_usuario
+DB_USER=davida
 DB_HOST=localhost
 DB_NAME=asa
-DB_PASSWORD=tu_contraseña
+DB_PASSWORD=estoesunaprueba
 DB_PORT=5432
 JWT_SECRET=supersecretkey
 ENCRYPTION_KEY=clave-secreta-segura
